tried experiments to add starter card, need to fix issue with displayed card data 1 behind msg data

--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,12 @@ img {
 figure {
   border: 3px solid #FED267;
   border-radius: 10px;
+  box-shadow: #000 1px 2px 3px;
 }
 
 button {
   font-weight: 700;
+  font-size: 1rem;
   color: #000;
   text-transform: uppercase;
   background-color: #FED267;
@@ -47,7 +49,8 @@ button {
   border: 3px solid #000;
   border-radius: 30px;
   display: inline-block;
-  margin-top: 20px;
+  margin: 20px auto 0 auto;
+  width: 200px;
 }
 
 h1 {
